# todo_list_agent

./: .env.example  .gitignore  README.md  pyproject.toml  workflow.md
.codex/skills/capture-learnings/: SKILL.md
.codex/skills/capture-learnings/agents/: openai.yaml
.codex/skills/capture-learnings/references/: learnings-template.md
.codex/skills/clarify-before-code/: SKILL.md
.codex/skills/clarify-before-code/agents/: openai.yaml
.codex/skills/clarify-before-code/references/: context-template.md  (+1 more)
.codex/skills/implement-approved-plan/: SKILL.md
.codex/skills/plan-before-code/: SKILL.md
.codex/skills/review-after-code/: SKILL.md
.codex/skills/validate-before-code/: SKILL.md
.khuym/: state.json
data/: tasks.json  tasks.sample.json
history/chat-agent-mcp-tool-discovery/: CONTEXT.md  approach.md  execution-log.md  review.md  validation.md  work-plan.md
history/chat-task-agent/: CONTEXT.md  approach.md  execution-log.md  review.md  validation.md  work-plan.md
history/daily-planner-agent/: CONTEXT.md  approach.md  execution-log.md  phase-1-contract.md  phase-1-story-map.md  phase-2-contract.md  phase-2-story-map.md  phase-3-contract.md  phase-3-story-map.md  phase-plan.md  review.md  validation.md  work-plan.md
src/daily_planner_agent/: __init__.py  chat_agent.py  cli.py  config.py  mcp_client.py  mcp_client_check.py  mcp_server.py  models.py  planner.py  reporting.py  store.py  streamlit_app.py
tests/: test_chat_agent.py  test_cli.py  test_mcp_client.py  test_mcp_server.py  test_planner.py  test_reporting.py  test_store.py  test_streamlit_app.py
(+11 files in other folders)
