[project]
name = "daily-planner-agent"
version = "0.1.0"
description = "MCP-backed daily planner agent demo with CLI markdown reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.2",
    "pydantic>=2.13.0",
    "pydantic-ai-slim[openai]>=1.107.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.58.0",
]

[project.scripts]
daily-planner-mcp = "daily_planner_agent.mcp_server:main"
daily-planner-plan = "daily_planner_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
